{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 47,
  "lineage": "8efc4fe1-fd32-9e06-67db-d89ddb09a34b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09ed39e30153c3bf9",
            "arn": "arn:aws:ec2:ap-south-1:322171059400:instance/i-0d2a15c14dd006903",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2a15c14dd006903",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0beb4ef3b7d5183f1"
              }
            ],
            "primary_network_interface_id": "eni-0beb4ef3b7d5183f1",
            "private_dns": "ip-172-31-47-70.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.70",
            "public_dns": "ec2-13-201-62-133.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.62.133",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04474db562d0f6623",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "Web_Rules"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e390e1264746a94",
            "tags": {
              "Env": "Production",
              "Name": "wordpress-backup",
              "Project": "backup-wordpress-Production"
            },
            "tags_all": {
              "Env": "Production",
              "Name": "wordpress-backup",
              "Project": "backup-wordpress-Production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066053d3cd11eb4a6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "322171059400",
            "id": "i-0d2a15c14dd006903",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.rule_web",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09ed39e30153c3bf9",
            "arn": "arn:aws:ec2:ap-south-1:322171059400:instance/i-06342e965bc792820",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06342e965bc792820",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ae7ba03a8cf1012a"
              }
            ],
            "primary_network_interface_id": "eni-0ae7ba03a8cf1012a",
            "private_dns": "ip-172-31-43-232.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.43.232",
            "public_dns": "ec2-13-233-224-58.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.224.58",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0708c1dee58e5a7df",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "Web_Rules"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e390e1264746a94",
            "tags": {
              "Env": "Production",
              "Name": "wordpress",
              "Project": "wordpress-Production"
            },
            "tags_all": {
              "Env": "Production",
              "Name": "wordpress",
              "Project": "wordpress-Production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-066053d3cd11eb4a6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "322171059400",
            "id": "i-06342e965bc792820",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.rule_web",
            "data.aws_key_pair.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rule_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:322171059400:security-group/sg-066053d3cd11eb4a6",
            "description": "Allow traffic",
            "egress": [],
            "id": "sg-066053d3cd11eb4a6",
            "ingress": [],
            "name": "Web_Rules",
            "name_prefix": "",
            "owner_id": "322171059400",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "wordpress-wordpress-Production",
              "Name": "wordpress",
              "Project": "Production"
            },
            "tags_all": {
              "Env": "wordpress-wordpress-Production",
              "Name": "wordpress",
              "Project": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b845e36d47d40c6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "322171059400",
            "id": "sg-066053d3cd11eb4a6",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1182052470",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-066053d3cd11eb4a6",
            "security_group_rule_id": "sgr-0809a55d6c237c59c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rule_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "22",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1073949703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-066053d3cd11eb4a6",
            "security_group_rule_id": "sgr-086f6159ffbac0ec7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rule_web"
          ]
        },
        {
          "index_key": "443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1473386987",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-066053d3cd11eb4a6",
            "security_group_rule_id": "sgr-014d0ea11ab08ed37",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rule_web"
          ]
        },
        {
          "index_key": "80",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4136202674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-066053d3cd11eb4a6",
            "security_group_rule_id": "sgr-0e0784f186f55b249",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rule_web"
          ]
        }
      ]
    }
  ]
}